--- a/frontend/package.json
+++ b/frontend/package.json
@@ -73,6 +73,7 @@
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
     "react-dom": "16.x",
+    "react-dropzone": "4.x",
     "react-helmet": "5.x",
     "react-lightweight-tooltip": "1.x",
     "react-modal": "3.x",
